--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": "7.0.*",
+        "php": "^7.1",
         "typo3/cms": "8.4.*",
         "symfony/symfony": "^3.0",
         "symfony/psr-http-message-bridge": "^1.0",
